JC-2 - Refactor code. Add streams examples.